# gitrepo

./: .git-credentials  .gitmodules  README.md  bright.py
Arduino_experiments/AS5600_readAngle/: AS5600_readAngle.ino
Arduino_experiments/BLE_server/: BLE_server.ino
Arduino_experiments/BTserial_discovery/: BTserial_discovery.ino
Arduino_experiments/Blink/: Blink.ino
Arduino_experiments/Bluetooth/: Bluetooth.ino
Arduino_experiments/Bluetooth_led/: Bluetooth_led.ino
Arduino_experiments/DC_motor_L9110S/: DC_motor_L9110S.ino
Arduino_experiments/Enc_Seeeduino/: Enc_Seeeduino.ino
Arduino_experiments/FastLed_testing/: FastLed_testing.ino
Arduino_experiments/SAMD21_TCC/: SAMD21_TCC.ino
Arduino_experiments/SAMD21_read_serial_ID/: SAMD21_read_serial_ID.ino
Arduino_experiments/SimpleReceiver/: PinDefinitionsAndMore.h  SimpleReceiver.ino
Arduino_experiments/WDT/: WDT.ino
Arduino_experiments/array/: array.ino
Arduino_experiments/ble_scanner_http/: ble_scanner_http.ino
Arduino_experiments/ble_server_temp_humid/: ble_server_temp_humid.ino
Arduino_experiments/check_spiffs/: check_spiffs.ino
Arduino_experiments/esp_now/: esp_now.ino
Arduino_experiments/freetouch/: freetouch.ino
Arduino_experiments/hall/: hall.ino
Arduino_experiments/integrated_neopixel/: integrated_neopixel.ino
Arduino_experiments/led_bright/: led_bright.ino
Arduino_experiments/mlx90333/: mlx90333.ino
Arduino_experiments/nimble_client/: nimble_client.ino
Arduino_experiments/oled_0.91inch_128x32/: oled_0.91inch_128x32.ino
Arduino_experiments/potent/: potent.ino
Arduino_experiments/potentiometer/: potentiometer.ino
Arduino_experiments/readsamd21_reg/: readsamd21_reg.ino
Arduino_experiments/samd21_TC3_int/: samd21_TC3_int.ino
Arduino_experiments/samd21_timer/: samd21_timer.ino
Arduino_experiments/sdcard/: sdcard.ino
Arduino_experiments/seeduino_hello_world/: seeduino_hello_world.ino
Arduino_experiments/sine_generation/: sine_generation.ino
Arduino_experiments/sketch_aug07a/: sketch_aug07a.ino
Arduino_experiments/sketch_dec11a/: sketch_dec11a.ino
Arduino_experiments/sketch_may07a/: sketch_may07a.ino
Arduino_experiments/sketch_sep09a/: sketch_sep09a.ino
Arduino_experiments/sketch_sep10a/: sketch_sep10a.ino
Arduino_experiments/sketch_sep11a/: sketch_sep11a.ino
Arduino_experiments/struct/: struct.ino
Arduino_experiments/wifi/: wifi.ino
PycharmProjects/: Elevator.py  README.md  RosesField.py  RosesField2.py  RosesField3.py  app.py  finanal.py  kvartira.py  myportfolio.txt  requirements.txt  servey.py  simplesnd.py  test_3RosesField.py  test_RosesField.py  test_SubMatSum.py
dev/: Intellisense_for_arduino.py  coco2yolo.py
dev/Prog_practice2/: first_cpp.cpp  linked_list.cpp  linked_list2.cpp
dev/archive/pycctag/: CMakeLists.txt  pycctag.cpp  pycctag_good.cpp
dev/archive/swig/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mat.hpp  mat.py
dev/gtk/: gtk_gui_test.py  test.py
dev/manim/: orange.py
dev/markers/: aruco_gen.py  pycctag_test.py
dev/qt6/: qt_my.py
dev/ros2uml/: gen.py  plantuml_export.txt  ros2_interfaces.txt
docker_test/: Dockerfile  model.py  requirements.txt
python/: Copy of Exercises.ipynb  ElevatorController_class_diagramm.txt  Pandas.ipynb  Untitled  Untitled0.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled8.ipynb  fin.txt  finance.ipynb  google_drive.ipynb  machine learning.ipynb  numpy (2).ipynb  numpy (3).ipynb  numpy.ipynb  plotly.ipynb  snp500.csv  snp500_wo_key.csv  svd.py
python/finance/: financials.csv  snp500_financials.csv  snp500_list.csv
stm32/bluepill/: platformio.ini
(+53 files in other folders)
